--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <input type="email" id="email" name="email" placeholder="Email Address">
         <input type="password" id="password" name="password" placeholder="Password">
         <input type="submit" value="CLAIM YOUR FREE TRIAL" id="btn-submit">
-        <p class="disclaimer">By clicking the button, you are agreeing to our <span>Terms and Services</span></p> 
+        <p class="disclaimer">By clicking the button, you are agreeing to our <a href="#">Terms and Services</a></p> 
       </form>
 
     </section>
