--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
 
     </section>
 
+    <div id="custom-alert" class="custom-alert">
+      <div class="custom-alert-content">
+          <p>Este es un mensaje de alerta personalizado.</p>
+          <button onclick="closeCustomAlert()">Close</button>
+      </div>
+  </div>
+  
     <script src="app.js"></script>
   </body>
 </html>
