--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
       </form>
     </section>
 
+    <div id="custom-alert" class="custom-alert">
+      <div class="custom-alert-content">
+          <p>Form submitted!</p>
+          <button onclick="closeCustomAlert()">Close</button>
+      </div>
+    </div>
+
     <script src="app.js"></script>
   </body>
 </html>
